# fp-homeworks

./: .gitignore  LICENSE  README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs
hw2/: README.md  hw2.cabal
hw2/src/: Block1.hs  Block2.hs  Block3.hs  Kernel.hs
hw2/src/MonadInstances/: FishToJoin.hs  FishToMonad.hs  MonadToFish.hs  MonadToJoin.hs
hw2/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw3/src/: Enviroment.hs  IOConsole.hs  Interpreter.hs  Parser.hs  Structure.hs
hw4/: README.md  hw4.cabal
hw4/app/: Main.hs
hw4/bench/: Bench.hs
hw4/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs
hw5/: README.md  hw5.cabal
hw5/app/: Main.hs
hw5/src/: Task1.hs  Task2.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw5/test/: Block1Spec.hs  Block4Spec.hs  Block5Spec.hs
